syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataStock";

// 股票信息
message StockInfo {
    // 股票内部编码
    string stkHcode = 1;
    // 上市板块代码：001-主板/002-中小企业板/003-三板/004-大宗交易系统/005-创业板/999-其他
    string listSectorHcode = 2;
    // 发行公司内部编码
    string partyHcode = 3;
    // 中文全称
    string cname = 4;
    // 中文简称
    string csname = 5;
    // 英文全称
    string ename = 6;
    // 英文简称
    string esname = 7;
    // 证券拼音
    string pyName = 8;
    // 股票类别1
    string stkClass1 = 9;
    // 股票类别2
    string stkClass2 = 10;
    // 股票类别3
    string stkClass3 = 11;
    // 面值
    double parValue = 12;
    // 证券代码
    string symbol = 13;
    // 市场证券代码
    string combSymbol = 14;
    // 市场编码
    string marketCode = 15;
    // 上市状态
    string listStatus = 16;
    // 上市日期
    int64 listDate = 17;
    // 退市日期
    int64 delistDate = 18;
    // 申万一级行业分类代码
    string swInduHcode1 = 19;
    // 申万一级行业分类名称
    string swInduCname1 = 20;
    // 申万二级行业分类代码
    string swInduHcode2 = 21;
    // 申万二级行业分类名称
    string swInduCname2 = 22;
    // 申万三级行业分类代码
    string swInduHcode3 = 23;
    // 申万三级行业分类名称
    string swInduCname3 = 24;
    /*************** 停牌信息 ******************/
    // 上交所股票停牌信息
    StockSuspensionInfo shStockSuspensionInfo = 25;
    // 深交所股票停牌信息 key为secuCode_dateStr(yyyy-MM-dd)
    map<string, StockSuspensionInfo> szStockSuspensionInfoMap = 26;
    /*************** 证券主表信息 ******************/
    // 证券内部编码
    string secuHcode = 27;
    // 证券内部编码(等价于secu_hcode)
    string secuCode = 28;
    // 货币内部编码
    string currHcode = 29;
    // 1）sec_class3=IMS079，则secu_type=B；
    // 2）sec_class3=IMS082，则secu_type=MR；
    // 3）sec_class3=IMS081，则secu_type=TD；
    // 4）sec_class3=IMS080，则secu_type=CD；
    string secuType = 30;
    // 证券名称
    string secuName = 31;
    // 数据中心证券类别
    string secType = 32;
    // 数据中心证券类别一
    string secClass1 = 33;
    // 数据中心证券类别二
    string secClass2 = 34;
    // 数据中心证券类别三
    string secClass3 = 35;
    /*************** 行情信息 ******************/
    // 当日股票行情
    StockPrice dayPrice = 36;
    // 上一交易日股票行情
    StockPrice lastTradingDayPrice = 37;
    /*************** 股本结构变化表 ******************/
    // 变动日期
    int64 changeDate = 38;
    // 公告日期
    int64 anncDate = 39;
    // 总股本
    double ttlShares = 40;
    // A股股本
    double ashares = 41;
    // 流通A股股本
    double circAshares = 42;
    // 限售A股股本
    double restrAshares = 43;
    // 非流通A股股本
    double uncircAshares = 44;
    // B股股本
    double bshares = 45;
    // 流通B股股本
    double circBshares = 46;
    // 限售B股股本
    double restrBshares = 47;
    // 非流通B股股本
    double uncircBshares = 48;
    // 港股股本
    double hshares = 49;
    // 海外流通股股本
    double outCircShares = 50;
}

message StockPrice {
    // 交易日期
    int64 tradeDate = 1;
    // 数据来源
    string dataSrc = 2;
    // 币种
    string currHcode = 3;
    // 昨收盘
    double lclosePrice = 4;
    // 开盘价
    double openPrice = 5;
    // 最高价
    double highPrice = 6;
    // 最低价
    double lowPrice = 7;
    // 收盘价
    double closePrice = 8;
    // 成交量
    double dealVol = 9;
    // 成交金额
    double dealAmt = 10;
}

message StockSuspensionInfo {
    // 组合证券编码
    string combSymbol = 1;
    // 交易日期
    int64 tradeDate = 2;
    // 证券内部编码
    string secHcode = 3;
    // 停牌标识
    string suspSign = 4;
    // 开始停牌日期
    int64 suspStdate = 5;
}
